# templator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  justfile  main.py  post-commit  pyproject.toml  requirements.txt  start_app.py  user_entry_point.py  validator_decorator.py
docs/: README.md  index.html  search.js  templator.html
docs/templator/: entry_point.html  module.html  settings.html
docs/templator/module/: foo.html
docs/templator/settings/: settings.html
env/: Dockerfile  requierements.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt
src/: logger_init.py  memory_profiling.py  public.env  pydantic_settings.py  settings.py  time_profiling.py
src/fastblob/: README.md  __init__.py
src/fastblob/api/: README.md  __init__.py
src/fastblob/api/blob_manager/: business.py  endpoint.py
src/fastblob/api/etl/: __init__.py  business.py  endpoint.py
src/fastblob/api/schemas/: __init__.py  schemas.py
src/fastblob/core/: README.md  __init__.py  azureblob_manager.py
src/fastblob/settings/: README.md  __init__.py  public.env  settings.py
src/templator/: README.md  __init__.py  entry_point.py
src/templator/module/: README.md  __init__.py  foo.py
src/templator/settings/: README.md  __init__.py  public.env  settings.py
tests/: README.md  __init__.py
tests/data/: README.md  test_public.env  test_secret.env
tests/module/: __init__.py  tests_foo.py
tests/settings/: __init__.py  tests_settings.py
tests/test_data/: README.md
