[build-system]
requires      = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "templator"
version = "0.1.0"
description = """This should be a short description of your package."""
readme = "README.md"
authors = [{name = "Username", email = "user@name.com"}]
maintainers = [{name = "Username", email = "user@name.com"}]
requires-python = ">=3.12, <3.13"
dependencies = [
    "ruff>=0.6.7",
    "ipython>=8.10.0",
    "python-dotenv>=1.0.1",
    "pytest-cov>=5.0.0",
    "pdoc >= 14.0.0",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/AntoonGa/templator"


#######################################
##            PYTESTS
#######################################
# pytest options, with coverage reports
[tool.pytest.ini_options]
# markers can be used to ignore tests
markers = "skip_this: skip this test"
norecursedirs =[".git",
                "venv",
                "__pycache__"]
addopts = "-v --durations=0 --cov=src tests --cov-report=term  --cov-report=html --cov-report=json --cov-report=xml"
cache_dir = ".cache/cov/"
# path to look for test files and standard tests file naming
testpaths = "tests"
python_files = "tests_*.py"

#######################################
##            COVERAGE
#######################################
[tool.coverage.run]
source = ["./src"]
omit = ["tests/*",
        "__init__.py"]

[tool.coverage.html]
directory = ".cache/cov/report.html"

[tool.coverage.json]
output = ".cache/cov/report.json"
pretty_print = true

[tool.coverage.xml]
output = ".cache/cov/report.xml"

[tool.coverage.report]
exclude_also = ["if self.debug:",
               "if __name__ == .__main__.:",
               "@jit",
               "@numba"]


#######################################
##            MYPY
#######################################
[tool.mypy]
python_version = "3.12"
exclude = "tests/"
# force type hint in every function definition
disallow_untyped_defs = true
# allows implicit optional when settings a default value.
no_implicit_optional = false
# prevent "any" returns and type def. This is very strict and could be set to false
warn_return_any = false


#######################################
##               RUFF
#######################################
[tool.ruff]
line-length = 100
# Exclude a variety of commonly ignored directories.
exclude = [
    "*.html",
    "*.toml",
    "*.ipynb",
    ".bzr",
    ".direnv",
    ".eggs",
    ".env",
    ".git",
    ".git-rewrite",
    ".gitignore",
    ".hg",
    ".ipynb",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "build_push_docker_ci_env.py",
    "data/*.*",
    "dist",
    "docs/*.*",
    "node_modules",
    "public/*.*",
    "tests_*.py",
    "venv",
    "sample.py",
    "metadata.py",
    ".history/",
]

target-version = "py311"

[tool.ruff.lint]
# All rules are listed here : https://docs.astral.sh/ruff/rules/#pyflakes-f
select = ["ALL"]
ignore = [
    # PURPOSELY DISABLED:
    "ANN002", # missing type annotation for *arg
    "ANN003", # missing type annotation for **kwarg
    "ANN101", # missing type annotation for `self` in method
    "ANN102", # missing type annotation for `cls` in classmethod
    "BLE", # ignore all blind exception issues
    "D107", # missing docstring in `__init__`
    "D415", # first line should end with a period, question mark, or exclamation point
    "FBT", # this limits the use of default boolean arguments in function definitions
    "FIX", # force issue resolving (in todos)
    "PTH", # proper use of PATH package
    "RET504", # prevents assignment of a variable before its return. Ignore for understandable code
    "SIM118", # this prevents the use of keys() in dictionaries. But forgets pd.Series have keys
    "TD003", # force issue link in todos
    "UP007", # use `X | Y` for type annotations: issues with the Optional module of type package
    "COM812", # conflict with black formatter
    "ISC001", # conflict with black formatter
    # TO SOLVE:
    "PLR0913", # too many arguments in function definition (6 > 5)
    "NPY002", # Replace legacy `np.random.rand` call with `np.random.Generator`
    "SIM108", # If else statement in single line.
    "RUF013", # prohibits usage of default | None union.
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"



#######################################
##          PYRIGHT/PYLANCE
#######################################
[tool.pyright]
reportInvalidTypeForm = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportIncompatibleMethodOverride = false
typeCheckingMode = "basic"
